# mipcc2023

./: .gitignore  README.md  SCIP_CPP_GUIDE.txt  all_series.txt  best_solution_time.py  eval.py  eval2.py  eval_mat.py  eval_time.py  grid_launch_full.sh  gurobimain.py  launch_comp_private.sh  launch_private_full.sh  launch_small5_bench.sh  main.py  mipcomp.sh  scipmain.py  solution_analysis.py  temp.txt  testlog.txt  update_cpp_code.sh
cppcode/: CMakeLists.txt  basemain.cpp  branch_cumpscost.cpp  branch_cumpscost.h  branch_levelpscost.cpp  branch_levelpscost.h  changes.txt  cuts_pool.cpp  cuts_pool.h  event_solfeedback.cpp  event_solfeedback.h  experiment.cpp  main.cpp  parameters.cpp  parameters.h  solutions.cpp  solutions.h  var_history.cpp  var_history.h
datasets/testfiles/: small_rhs_series_2.test
helper_scripts/: launch_full_bench.sh  launch_mat_bench.sh  launch_private_small5.sh  launch_small10_bench.sh  solution_analysis.py
logs/: lin_mat_1.txt  lin_obj_1.txt  lin_rhs_1.txt  lin_rhs_2.txt  lin_rhs_2_small.txt  lin_rhs_2_small_best_sol.txt  lin_rhsobj_1.txt
optsolutions/bnd_series_1/: bnd_s1_i01.mps.gz.sol  bnd_s1_i02.mps.gz.sol  bnd_s1_i03.mps.gz.sol  bnd_s1_i04.mps.gz.sol  bnd_s1_i05.mps.gz.sol  bnd_s1_i06.mps.gz.sol  bnd_s1_i07.mps.gz.sol  bnd_s1_i08.mps.gz.sol  bnd_s1_i09.mps.gz.sol  bnd_s1_i10.mps.gz.sol  bnd_s1_i11.mps.gz.sol  bnd_s1_i12.mps.gz.sol  bnd_s1_i13.mps.gz.sol  bnd_s1_i14.mps.gz.sol  bnd_s1_i15.mps.gz.sol  bnd_s1_i16.mps.gz.sol  bnd_s1_i17.mps.gz.sol  bnd_s1_i18.mps.gz.sol  bnd_s1_i19.mps.gz.sol  bnd_s1_i20.mps.gz.sol  bnd_s1_i21.mps.gz.sol  bnd_s1_i22.mps.gz.sol  bnd_s1_i23.mps.gz.sol  bnd_s1_i24.mps.gz.sol  bnd_s1_i25.mps.gz.sol  bnd_s1_i26.mps.gz.sol  bnd_s1_i27.mps.gz.sol  bnd_s1_i28.mps.gz.sol  bnd_s1_i29.mps.gz.sol  bnd_s1_i30.mps.gz.sol  bnd_s1_i31.mps.gz.sol  bnd_s1_i32.mps.gz.sol  bnd_s1_i33.mps.gz.sol  bnd_s1_i34.mps.gz.sol  bnd_s1_i35.mps.gz.sol  bnd_s1_i36.mps.gz.sol  bnd_s1_i37.mps.gz.sol  bnd_s1_i38.mps.gz.sol  bnd_s1_i39.mps.gz.sol  bnd_s1_i40.mps.gz.sol  (+10 more)
optsolutions/bnd_series_2/: bnd_s2_i20.mps.gz.sol  bnd_s2_i49.mps.gz.sol
optsolutions/magic_series_1/: sp_3_0.mps.gz.sol  (+37 more)
solutions/: rhs_s2_logs.txt  rhs_s2_small_logs.txt  small_logs_2.txt
(+2473 files in other folders)
