cmake_minimum_required(VERSION 3.3)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
project(cppex)
find_package(SCIP REQUIRED)
include_directories(${SCIP_INCLUDE_DIRS})
add_executable(cppex
  main.cpp)
target_link_libraries(cppex ${SCIP_LIBRARIES})
if( TARGET examples )
    add_dependencies( examples cppex )
endif()
